Fixed mobile slider number visual cutoff

--- a/wechange_payments/static/less/slider.less
+++ b/wechange_payments/static/less/slider.less
@@ -34,7 +34,6 @@
 		  		display: inline-block;
 		  		border: 1px solid @slider-background-color;
 		  		background-color: @amount-background-color;
-				padding: 0 5px 0 5px;	
 		  	}
 		  	.amount-frame, .amount-currency {
 		  		color: @slider-main-color;
@@ -45,7 +44,7 @@
   	}
   	
 	input {
-		width: 34px;
+		width: 48px;
 		border: none;
 		background: none;
 		color: @slider-main-color;
